# Ascend-msinsight

./: .clang-format  .gitignore  .npmrc  CMakeLists.txt  CONTRIBUTING.md  DISCLAIMER.md  README.md  build.py  build.sh  compile.sh  llt_test.sh  package-lock.json  package.json  settings.gradle  test_unite.py  tsconfig.app.json  vite.config.ts  webpack.config.js
platform/: .gitignore  Cargo.toml  Makefile.toml  README.md  build.rs  rustfmt.toml
platform/.cargo/: config  config.toml
platform/bundle/: installer.nsi  main.rc
platform/resources/license/: hwEulaCommunity.txt
platform/src/: default.rs  dev.rs  http.rs  main.rs  webview.rs  webview2err.rs
platform/src/webview/: cleanup.rs  webview2err.rs
server/: CMakeLists.txt  toolchain.cmake
server/.cloudbuild/: build.bat  build.yml  buildBinary.sh  dependency.xml
server/.cloudbuild/bep/: bep_env.conf
server/.codecheck/: code.xml
server/build_fuzz/: execute_fuzz_test.sh
server/cmake/: third_party.cmake
server/msinsight/include/: ApiHandler.h  BasePlugin.h  WsSender.h
server/msinsight/include/base/: BaseModule.h  ModuleRequestHandler.h  ProtocolUtil.h  RequestContext.h
server/msinsight/include/utils/: NumberSafeUtil.h  SafeQueue.h  ServerLog.h  ThreadPool.h  TraceIdManager.h
server/msinsight/src/: PluginsManager.cpp  PluginsManager.h  WsSender.cpp  WsSession.h  WsSessionManager.cpp  WsSessionManager.h
server/msinsight/src/base/: BaseModule.cpp  ModuleRequestHandler.cpp  ParamsParser.cpp  ParamsParser.h  ProtocolUtil.cpp
server/msinsight/src/utils/: CmdUtil.h  CollectionUtil.h  ExecUtil.h  FileDef.h  FileUtil.cpp  FileUtil.h  IdBuilder.cpp  IdBuilder.h  JsonUtil.h  LogUtil.h  NumberUtil.h  ProtocolEnumUtil.h  PythonUtil.cpp  PythonUtil.h  RegexUtil.h  ServerLog.cpp  Status.h  (+11 more)
server/src/: CMakeLists.txt
server/src/channel/: Channel.h  ChannelCallbacks.cpp  ChannelCallbacks.h  ChannelFactory.cpp  ChannelHandler.h  ChannelObjectId.cpp  ChannelObjectId.h  ChannelSocket.h  UvLoopMgr.cpp
server/src/cluster_analyse/: cluster_analysis.py
server/src/defs/: CommonDefs.h  ConstantDefs.h  DbSqlDefs.h  GlobalDefs.h  NumDefs.h  TableDefs.h  WsDefs.h
server/src/entry/: CMakeLists.txt
server/src/modules/: BaseModule.h  CommonRequests.cpp  CommonRequests.h  ModuleErrorCode.h  ModuleManager.cpp  ModuleManager.h  ModuleRequestHandler.cpp  Plugins.cpp  ProtocolManager.cpp  ProtocolManager.h  ProtocolMessage.h
server/src/protocol/: EventManager.h  EventUtil.cpp  Protocol.h  ProtocolDefs.h  ProtocolEnum.h  ProtocolEnumUtil.h  ProtocolMessageBuffer.cpp  ProtocolMessageBuffer.h  ProtocolParamUtil.h  ProtocolRequest.h  RequestManager.cpp  ResponseUtil.cpp
server/src/server/: BaseServer.h  ParamsParser.cpp  ParamsParser.h  ResponseQueue.cpp  ResponseQueue.h  ServerDefs.h  ServerLog.h  TokenBuilder.cpp  TokenBuilder.h  WsServer.cpp  WsServer.h  WsSession.cpp  WsSession.h  WsSessionImpl.cpp  WsSessionImpl.h
server/src/test/: CMakeLists.txt  DatabaseTestCaseMockUtil.cpp  DatabaseTestCaseMockUtil.h  DatabaseTestConst.cpp  DatabaseTestConst.h  FullDbTestSuit.cpp  ProtocolTest.cpp  TestSuit.cpp  TestSuit.h
server/src/utils/: CmdUtil.h  CollectionUtil.h  ExecUtil.h  FileDef.h  FileUtil.cpp  FileUtil.h  IdBuilder.cpp  IdBuilder.h  JsonUtil.h  LogUtil.h  NumberUtil.h  RegexUtil.h  SafeFile.cpp  SafeFile.h  SafeQueue.h  SocketUtil.h  StringUtil.h  SystemUtil.h  ThreadPool.cpp  ThreadPool.h  TimeUtil.h  Timer.h  ValidateUtil.h
src/: App.vue  CMakeLists.txt  extension.ts  main.ts  moduleConfig.ts
src/assets/: base.css  main.css  reset.css
src/centralServer/: server.ts
src/centralServer/websocket/: connection.ts  defs.ts  messageManager.ts
src/channel/: Channel.cpp  ChannelCallbacks.cpp  ChannelFactory.h  ChannelSocket.cpp  ChannelThread.cpp  ChannelThread.h  UvDefs.h  UvLoopMgr.cpp  UvLoopMgr.h
src/components/: ButtonComp.vue  FormComp.vue  ModalView.vue  ProjectMode.vue  ResourceComp.vue  TabPane.vue  TheWelcome.vue
src/components/MenuTree/: DeletePopConfirm.vue  MenuTree.vue  TreeNode.vue
src/components/icons/: arrow_icon.vue  bin_icon.vue  folder_icon.vue  gear_icon.vue
src/connection/: index.ts
src/defs/: GlobalDefs.h  WsDefs.h
src/entry/server/: CMakeLists.txt
src/modules/: BaseModule.h  BaseProtocol.cpp  BaseProtocol.h  ModuleErrorCode.h  ModuleManager.cpp  ModuleManager.h  ModuleRequestHandler.cpp  ModuleRequestHandler.h  ProtocolManager.cpp  ProtocolManager.h
src/modules/base/: BaseModule.cpp  Database.cpp  Database.h  FileParser.h
src/modules/global/: GlobalModule.cpp  GlobalModule.h
src/modules/timeline/: TimelineModule.cpp  TimelineModule.h
src/platform/: BasePlatform.ts  Browser.ts  IntellijPlatform.ts  VsCodePlatform.ts  messageSender.ts
src/protocol/: EventManager.cpp  EventManager.h  EventUtil.cpp  EventUtil.h  Protocol.h  ProtocolBase.h  ProtocolDefs.h  ProtocolEntity.h  ProtocolEnum.h  ProtocolEnumUtil.h  ProtocolErrorCode.h  ProtocolEvent.h  ProtocolMessageBuffer.cpp  ProtocolMessageBuffer.h  ProtocolRequest.h  ProtocolResponse.h  ProtocolUtil.cpp  ProtocolUtil.h  RequestBuilder.h  RequestManager.cpp  RequestManager.h  ResponseManager.cpp  ResponseManager.h  ResponseUtil.cpp  ResponseUtil.h
src/router/: index.ts
src/scene/: AscendScene.cpp  AscendScene.h  BaseScene.cpp  BaseScene.h  GlobalScene.cpp  GlobalScene.h  HarmonyScene.cpp  HarmonyScene.h  SceneErrorCode.h  SceneManager.cpp  SceneManager.h
src/scene/handler/: SceneRequestHandler.cpp  SceneRequestHandler.h
src/server/: BaseServer.h  ParamsParser.cpp  ParamsParser.h  ServerLog.h  TokenBuilder.cpp  TokenBuilder.h  WsServer.cpp  WsSession.cpp  WsSession.h  WsSessionManager.cpp  WsSessionManager.h
src/stores/: dataSource.ts  index.ts  resourceComp.ts  session.ts
src/utils/: ExecUtil.h  FileUtil.h  IdBuilder.h  JsonUtil.h  LogUtil.h  RegexUtil.h  SafeQueue.h  StringUtil.h  SystemUtil.h  ThreadPool.cpp  ThreadPool.h  TimeUtil.h
src/views/: ModulesView.vue  RemoteManager.vue
src/views/Modules/: index.vue
src/views/RemoteManager/: index.vue
src/webview/: RegisterWebview.ts  Webview.ts  WebviewManager.ts
(+4045 files in other folders)
