[package]
name = "MindStudioInsight"
version = "0.1.0"
edition = "2021"
build = "build.rs"
include = ["resources"]

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
strip = "symbols"

[dependencies]
wry = {registry = "openSources", version="0.24.3", features = ["file-drop"], optional = true}
uuid = {registry = "openSources", version = "1.7.0", features = ["v4"], optional = true}

[features]
default = ["wry", "uuid"]
http = []

[package.metadata.bundle]
name = "MindStudioInsight"
identifier = "com.huawei.ascend.mindstudio"
version = "{plugins_version}"
short_description = "MindStudioInsight {plugins_version}"
long_description = "Application: MindStudioInsight {plugins_version}"
copyright = "Huawei Enterprise End User License Agreement."
resources = ["./resources/*"]
icon = ["resources/images/icons/mindstudio.ico"]