[package]
name = "MindStudioInsight"
version = "0.1.0"
edition = "2021"
include = ["resources"]

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
strip = "symbols"

[dependencies]
wry = { registry = "openSources", version="0.24.11", features = ["file-drop"], optional = true }

[features]
default = ["wry"]
http = []

[package.metadata.bundle]
name = "MindStudioInsight"
identifier = "com.huawei.ascend.mindstudio"
version = "{plugins_version}"
short_description = "MindStudioInsight {plugins_version}"
long_description = "Application: MindStudioInsight {plugins_version}"
copyright = "Huawei Enterprise End User License Agreement."
icon = ["resources/images/icons/mindstudio.ico"]