[package]
name = "MindStudioInsight"
version = "0.1.0"
edition = "2021"
include = ["resources"]

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
strip = "symbols"

[dependencies]
wry = { registry = "crates-io", version="0.24.11", features = ["file-drop"], optional = true }

[features]
default = ["wry"]
http = []

[package.metadata.bundle]
name = "MindStudioInsight"
identifier = "com.huawei.ascend.mindstudio"
version = "7.0.RC3"
short_description = "MindStudioInsight 7.0.RC3"
long_description = "Application: MindStudioInsight 7.0.RC3"
copyright = "Huawei Enterprise End User License Agreement."
icon = ["resources/images/icons/mindstudio.ico"]